# Atl4s_f0rex_secret

./: ADVANCED_FEATURES_OPTIONS.md  AGI_MEMORY_LOG.md  ANALYTICS_INTEGRATION.md  ARQUITETURA_AGI.md  README.md  TRADE_JOURNAL_GUIDE.md  UPDATE_REPORT_V2.0.txt  agi_fase_2_-_consciência_e_autonomia_transcendental_de25d969.plan.md  analyze_losses.py  backtest_engine.py  backtest_engine_predator.py  bridge.py  build_cpp.py  config.py  context_340.txt  dashboard_server.py  data.csv  data_loader.py  debug_backtest.py  debug_bridge.py  debug_connection.py  debug_date_parsing.py  debug_momentum.py  debug_structure.py  deep_forensic.py  diagnose_connection.py  diagnose_hdc.py  download_data.py  genesis_backtest.py  genesis_backtest_ascii.py  genesis_backtest_report.txt  genesis_live.py  genesis_ml_methods.py  genesis_test_backtest.py  github_upload.ps1  implementação_agi_-_sistema_de_pensamento_recursivo_infinito_5708edb8.plan.md  inspect_losers.py  install_bot.bat  install_v2.bat  kill_zombies.ps1  (+72 more)
.agent/rules/: aspecto.md  backtest.md  ceo.md  conceitual_1.md  nova.md  potencial maximo.md  venv.md
.git - Copia/: .MERGE_MSG.swp  COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index
.git - Copia/logs/: HEAD
Atl4s_f0rex_secret-main/: .gitignore  README.md  bridge.py  config.py  inspect_data.py  main.py  orchestrator.py  requirements.txt  risk_manager.py  simulation_system.py  switch_to_v1.bat  switch_to_v2.bat  update_github.py  verify_assets.html  verify_black_swan.py  verify_seventh_eye.py  verify_sixth_eye.py
Atl4s_f0rex_secret-main/analysis/: divergence.py  fifth_eye.py  fractal_vision.py  kinematics.py  microstructure.py  ninth_eye.py  risk_neural.py  second_eye.py  wavelet_core.py
Atl4s_f0rex_secret-main/reports/: report_20251120.html  style.css
Atl4s_f0rex_secret-main/src/: analysis_engine.py  cache_manager.py  dashboard_generator.py  executor.py  news_scraper.py  quantum_math.py
analysis/: black_swan_adversary.py  chaos_engine.py  consensus.py  cortex_memory.py  deep_cognition.py  divergence.py  eleventh_eye.py  fifth_eye.py  final_11_losses.md  fourteenth_eye.py  fourth_eye.py  fractal_vision.py  game_theory.py  loss_report_20260116.md  m8_fibonacci_system.py  market_cycle.py  math_core.py  microstructure.py  monte_carlo.py  monte_carlo_fractal.py  nano_structure.py  ninth_eye.py  order_flow.py  patterns.py  prediction_engine.py  quant.py  quantum_core.py  recent_losses_report.md  recursive_reasoner.py  risk_neural.py  scalper_swarm.py  second_eye.py  seventh_eye.py  sixth_eye.py  smart_money.py  smc_engine.py  sniper.py  strategy_genome.py  supply_demand.py  technical_library.py  (+9 more)
analysis/agi/: __init__.py  akashic_core.py  (+2 more)
analytics/: README.md  __init__.py  advanced_backtester.py  dashboard_generator.py  demo_optimizer.py  generate_sample_data.py  genesis_analytics.py  ml_optimizer.py  risk_monitor.py  telegram_notifier.py  trade_analyzer.py  trade_journal.py
backtest/: __init__.py  charts.py  engine.py  metrics.py
brain/: holographic_plate.npy  holographic_plate.pkl  task.md
config/: telegram.json
core/: __init__.py  acceleration.py  ask_chrome.py  auto_bridge.py  consciousness_bus.py  cpp_loader.py  execution_engine.py  genesis_adapters.py  genetics.py  github_uplink.py  grandmaster.py  holographic_memory.py  hyper_dimensional.py  interfaces.py  laplace_demon.py  mcts_planner.py  neuro_link.py  neuroplasticity.py  news_scraper.py  opportunity_flow.py  quantum_bus.py  swarm_filter.py  swarm_orchestrator.py  system_guard.py  transformer_lite.py  zmq_bridge.py
cpp_core/: CMakeLists.txt  agi_bridge.py  hdc.cpp  hdc.h  learning.cpp  learning.h  mcts.cpp  mcts.h  memory.cpp  memory.h  physics.cpp  physics.h  reasoning.cpp  reasoning.h
dashboard/: package-lock.json
data/: EURUSD_M1.csv  GBPUSD_M1.csv  USDCAD_M1.csv  USDCHF_M1.csv  USDJPY_M1.csv  genesis_trades.json  trade_context.json  trade_history.json
e9c00237-c64a-443c-808a-8108cf0778b8/: findings_summary.md  findings_summary.md.metadata.json  findings_summary.md.resolved.0  findings_summary.md.resolved.1  findings_summary.md.resolved.2  implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved  implementation_plan.md.resolved.0  task.md  task.md.metadata.json  task.md.resolved  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  task.md.resolved.3  task.md.resolved.4  task.md.resolved.5
historical_datas/: DAT_MT_GBPUSD_M1_202601.csv
ignore/: Atl4sBridge2.ex5
models/: rl_optimizer.pkl
mql5/: Atl4sBridge.ex5  Atl4sBridge.mq5  Atl4sBridge_Tester.mq5  Atl4sDataExporter.mq5
reports/: history_DAT_MT_GBPUSD_M1_2016_PARTIAL_results.json  history_DAT_MT_GBPUSD_M1_2016_results.json  history_DAT_MT_GBPUSD_M1_2022_results.json  laplace_gbpusd_results.json  report_20251121.html  report_20251124.html  report_20251209.html  risk_alerts.json  template.html
risk/: dynamic_leverage.py  great_filter.py
signals/: __init__.py  correlation.py  momentum.py  structure.py  timing.py  volatility.py
site/: script.js
src/: macro_math.py  markov_chain.py  mt5_monitor.py  notifications.py  price_action.py  quantum_math.py  strategy_core.py  technical_analysis.py
templates/: index.html
tests/: benchmark_thought_tree.py  force_live_trade.py  test_agi_systems.py  test_calibration.py  test_correlation_integration.py  test_laplace.py  test_smart_logic.py  test_telegram_direct.py  test_trend_exhaustion.py  verify_cognitive_inference.py  verify_full_integration.py  verify_infinite_recursion.py  verify_mcts.py  verify_neural_core_capability.py  verify_neural_value.py  verify_notifications_live.py  verify_perception.py  verify_persistence_live.py  verify_question_capacity.py  verify_split_fire.py  verify_swarm_audit.py
v2_0/: check_stops.py  debug_client.py  main_fixed.py  news_scraper.py  test_notif.py  update_github.py  upload_v2.py  verify_architect.py  verify_system.py
(+702 files in other folders)
